--- a/versions/fabric/1.21/mods/polytone.pw.toml
+++ b/versions/fabric/1.21/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.2.8-fabric.jar"
+filename = "polytone-1.21-2.2.9-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/u9t3V4Ih/polytone-1.21-2.2.8-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/9e7Ie3DE/polytone-1.21-2.2.9-fabric.jar"
 hash-format = "sha1"
-hash = "0c861ad64018bd3e19fc4c7c0cf0b03a67e029fb"
+hash = "a084ffa1b03ab6f320846fa1929529f22aa2e7b5"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "u9t3V4Ih"
+version = "9e7Ie3DE"
