--- a/versions/fabric/1.21/mods/polytone.pw.toml
+++ b/versions/fabric/1.21/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.2.9-fabric.jar"
+filename = "polytone-1.21-2.2.10-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/9e7Ie3DE/polytone-1.21-2.2.9-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/eUFeTK55/polytone-1.21-2.2.10-fabric.jar"
 hash-format = "sha1"
-hash = "a084ffa1b03ab6f320846fa1929529f22aa2e7b5"
+hash = "ac07175fbe1ca5f79f9a704c95c1eb60f53d3e28"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "9e7Ie3DE"
+version = "eUFeTK55"
