--- a/versions/fabric/1.21/config/yosbr/config/modernfix-mixins.properties
+++ b/versions/fabric/1.21/config/yosbr/config/modernfix-mixins.properties
@@ -1,15 +1,13 @@
-# This config file is taken from Simply Optimized 6.2.2, and the following 
-# patches that SO enables are removed for stability and compatibility:
-#     mixin.bugfix.packet_leak | experimental
-#     mixin.perf.clear_fabric_mapping_tables | may be incompatible with other mods
-#     mixin.perf.remove_spawn_chunks | breaks vanilla parity
-#     mixin.perf.clear_mixin_classinfo | may be incompatible with other mods
-# 
-# Thanks HyperSoop for allowing me to modify the config file for Adrenaline :)
-# 
-# For more information on the ModernFix patches and what they do, see the
-# wiki on the Git repo: https://github.com/embeddedt/ModernFix/wiki
-
+mixin.bugfix.chunk_deadlock=true
+mixin.bugfix.packet_leak=true
+mixin.bugfix.paper_chunk_patches=true
+mixin.perf.clear_fabric_mapping_tables=true
+mixin.perf.clear_mixin_classinfo=true
 mixin.perf.dynamic_entity_renderers=true
-mixin.perf.dynamic_resources=true
 mixin.perf.faster_item_rendering=true
+mixin.perf.nbt_memory_usage=true
+mixin.perf.dynamic_sounds=true
+mixin.perf.thread_priorities=false
+mixin.perf.dynamic_resources=true
+mixin.perf.deduplicate_location=true
+mixin.perf.worldgen_allocation=true
