--- a/versions/fabric/1.21/mods/polytone.pw.toml
+++ b/versions/fabric/1.21/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.2.10-fabric.jar"
+filename = "polytone-1.21-2.2.12-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/eUFeTK55/polytone-1.21-2.2.10-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/S7bbo8QV/polytone-1.21-2.2.12-fabric.jar"
 hash-format = "sha1"
-hash = "ac07175fbe1ca5f79f9a704c95c1eb60f53d3e28"
+hash = "9e5fab41797ccdb71f5150d7f6729048162a280e"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "eUFeTK55"
+version = "S7bbo8QV"
