--- a/versions/fabric/1.21.1/mods/polytone.pw.toml
+++ b/versions/fabric/1.21.1/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.3.8-fabric.jar"
+filename = "polytone-1.21-2.3.10-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/1u2zTh7G/polytone-1.21-2.3.8-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/5OWOkbp6/polytone-1.21-2.3.10-fabric.jar"
 hash-format = "sha1"
-hash = "b0c4b0bae470768f888b0e69617d0f40884f956a"
+hash = "f7ec804fc425212fd769a9ba9e12c1a20f1a9d31"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "1u2zTh7G"
+version = "5OWOkbp6"
