--- a/versions/fabric/1.21.1/mods/resolutioncontrol3.pw.toml
+++ b/versions/fabric/1.21.1/mods/resolutioncontrol3.pw.toml
@@ -1,13 +1,13 @@
 name = "ResolutionControl 3"
-filename = "ResolutionControl-3-1.21.1-4.0.1.jar"
+filename = "ResolutionControl-3-1.21.1-4.0.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/wHm7Bneo/versions/iS9lkvQ5/ResolutionControl-3-1.21.1-4.0.1.jar"
+url = "https://cdn.modrinth.com/data/wHm7Bneo/versions/VbIXIjtE/ResolutionControl-3-1.21.1-4.0.2.jar"
 hash-format = "sha1"
-hash = "f16c0aee630caa27af20322a8f638c7cafdcc960"
+hash = "47074713eed39f4f1d421e75fd559bbac597d34c"
 
 [update]
 [update.modrinth]
 mod-id = "wHm7Bneo"
-version = "iS9lkvQ5"
+version = "VbIXIjtE"
