--- a/versions/fabric/1.21.1/mods/entity-model-features.pw.toml
+++ b/versions/fabric/1.21.1/mods/entity-model-features.pw.toml
@@ -1,13 +1,13 @@
 name = "Entity Model Features [CEM]"
-filename = "entity_model_features_fabric_1.21-2.2.4.jar"
+filename = "entity_model_features_fabric_1.21-2.2.5.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/4I1XuqiY/versions/oDvkeij1/entity_model_features_fabric_1.21-2.2.4.jar"
+url = "https://cdn.modrinth.com/data/4I1XuqiY/versions/gxkUEYca/entity_model_features_fabric_1.21-2.2.5.jar"
 hash-format = "sha1"
-hash = "abebe4c3a738937da6c6d1b99da291d039f39a86"
+hash = "72c85e1574a38235a230ff7bc603e447a9a522fd"
 
 [update]
 [update.modrinth]
 mod-id = "4I1XuqiY"
-version = "oDvkeij1"
+version = "gxkUEYca"
