--- a/versions/fabric/1.21.8/config/moreculling.toml
+++ b/versions/fabric/1.21.8/config/moreculling.toml
@@ -1,6 +1,6 @@
 version = 1
 itemFrameLODRange = 16
 itemFrame3FaceCullingRange = 2.0
-leavesCullingMode = "DEPTH"
+leavesCullingMode = "DEFAULT"
 includeMangroveRoots = true
 endGatewayCulling = true
