--- a/versions/fabric/1.21.11/mods/xaeros-world-map.pw.toml
+++ b/versions/fabric/1.21.11/mods/xaeros-world-map.pw.toml
@@ -1,6 +1,6 @@
 name = "Xaero's World Map"
 filename = "xaeroworldmap-fabric-1.21.11-1.40.6.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/NcUtCpym/versions/Ljqxh4kI/xaeroworldmap-fabric-1.21.11-1.40.6.jar"
