--- a/versions/fabric/1.21.11/mods/zfastnoise.pw.toml
+++ b/versions/fabric/1.21.11/mods/zfastnoise.pw.toml
@@ -1,6 +1,6 @@
 name = "Fast Noise"
 filename = "zfastnoise-1.0.8+1.21.11.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/OnlVIpq5/versions/lWSoliAR/zfastnoise-1.0.8%2B1.21.11.jar"
