--- a/versions/fabric/1.21.11/resourcepacks/glow-ores.pw.toml
+++ b/versions/fabric/1.21.11/resourcepacks/glow-ores.pw.toml
@@ -1,6 +1,7 @@
 name = "Glow Ores"
 filename = "Glow Ore 1.21.9+.zip"
 side = "client"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/JFwkTemi/versions/LQpVRN5T/Glow%20Ore%201.21.9%2B.zip"
